--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -2,12 +2,12 @@ name: e2e tests
 
 on:
   schedule:
-    - cron: "0 9 * * 1" # every monday at midnight
+    - cron: "0 9 * * 1" # every monday at 9:00
   # Allow to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
-  build:
+  e2e:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout project
@@ -19,5 +19,5 @@ jobs:
           distribution: 'temurin'
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
-      - name: Run build with Gradle Wrapper
+      - name: Run gwatlin e2e tests
         run: ./run-e2e-suite.sh
